MVP of fix for jumpy scrollbar issue

--- a/polaris-react/src/components/Navigation/Navigation.scss
+++ b/polaris-react/src/components/Navigation/Navigation.scss
@@ -54,6 +54,8 @@ $nav-max-width: 360px;
   align-items: stretch;
   max-width: 100%;
 
+  @include custom-scrollbars();
+
   &:focus {
     outline: none;
   }
